# people-analytics

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dbt-docs.yml
airflow/: Dockerfile  README.md  requirements.txt
airflow/dags/: hris_daily.py
dbt_project/: dbt_project.yml  profiles.yml.example
dbt_project/macros/: as_of.sql  generate_schema_name.sql  json_extract.sql  surrogate_key.sql
dbt_project/models/core/: dim_date.sql  fact_headcount_snapshot_daily.sql  fact_manager_chain_daily.sql  schema.yml
dbt_project/models/semantic/: metricflow_time_spine.sql  metrics_recruiting.yml  metrics_workforce.yml  schema.yml  sem_recruiting.yml  sem_workforce.yml
dbt_project/models/sources/: sources.yml
dbt_project/tests/: headcount_non_negative.sql  scd2_no_overlapping_versions.sql  scd2_unique_grain.sql  snapshot_implies_active_episode.sql  snapshot_unique_per_day_per_employee.sql
description/: jd.md
documentation/: deep-research-report.md  people-analytics-design.html  people-analytics-design.md
extractors/ats_ashby/: cli.py
extractors/common/: landing.py
extractors/hris_workday/: cli.py
notebooks/: explore.ipynb  queries.sql
reports/: .npmrc  evidence.config.yaml  package-lock.json  package.json
reports/pages/: index.md  recruiting.md  workforce.md
reports/sources/people_analytics/: connection.yaml  dim_employee.sql  dim_employment_episode.sql  dim_job_requisition.sql  (+4 more)
sample_data/: generate.py  generate_ats.py
scripts/: generate_data.py  setup.py
snowflake/ddl/: 01_database_schemas.sql  02_roles.sql  03_masking_policies.sql  04_erasure_procedure.sql
tests/: test_pipeline.py
(+38 files in other folders)
