[project]
name = "people-analytics"
version = "0.1.0"
description = "People Analytics foundation — synthetic-data-driven, dbt-modelled, runnable end-to-end on DuckDB."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Pooyan Sharifi" }]

dependencies = [
    "duckdb>=1.1",
    "dbt-core>=1.9",
    "dbt-duckdb>=1.9",
    "pydantic>=2.6",
    "httpx>=0.27",
    "structlog>=24.1",
    "faker>=30",
    "python-dateutil>=2.9",
    "click>=8.1",
]

[project.optional-dependencies]
snowflake = ["dbt-snowflake>=1.9", "snowflake-connector-python>=3.10"]
airflow = ["apache-airflow>=2.9"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
    "sqlfluff>=3.1",
    "sqlfluff-templater-dbt>=3.1",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "pandas>=2.2",
    "tabulate>=0.9",
]

[project.scripts]
pa-generate-data = "scripts.generate_data:main"
pa-extract-hris = "extractors.hris_workday.cli:main"
pa-setup = "scripts.setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["extractors", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.sqlfluff.core]
dialect = "duckdb"
templater = "jinja"
exclude_rules = ["L034"]
